--- a/content/publication/liu-2024-double/cite.bib
+++ b/content/publication/liu-2024-double/cite.bib
@@ -1,9 +1,9 @@
 @article{liu2024double,
  author = {Liu, Chih-Lun and Kaminski, Alexis K and Smyth, William D},
  journal = {Journal of Fluid Mechanics},
- pages = {},
+ pages = {A8},
  publisher = {Cambridge University Press},
  title = {Turbulence and Mixing from Neighbouring Stratified Shear Layers},
- volume = {},
- year = {}
+ volume = {987},
+ year = {2024}
 }
